feat: implement jwt auth